error correction (4)
horizontal scrollbar deleted using property "scroll" in config

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,3 @@
     font-weight: 500;
     padding: 10px 15px;
 }
-.webix_vscroll_x {
-    overflow-x: hidden;
-}
